[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhazards"
version = "1.0.1"
description = "A Python framework for AI-powered hazard prediction and risk assessment"
readme = "README.md"
authors = [{ name = "Xueqi Cheng", email = "xc25@fsu.edu" }]
license = "MIT"
requires-python = ">=3.8, <3.13"

dependencies = [
    "torch>=2.3.0,<3.0",
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.50.0",
    "pyyaml>=5.3.0",
    "pydantic>=2.0.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://labrai.github.io/PyHazard"
Repository = "https://github.com/LabRAI/PyHazard"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyhazards*"]
